unpackaged/objects/ContractInfo__c.object
<CustomObject>
    <fields>
        <fullName>BudgetRate__c</fullName>
        <label>予算レート</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Busho__c</fullName>
        <label>部署</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractNumVal__c</fullName>
        <formula>VALUE(Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Number</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CountryCallingCodes__c</fullName>
        <inlineHelpText>日本＝81
中国＝86
香港＝852
ベトナム＝84
インド＝91</inlineHelpText>
        <label>国際電話国番号</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CountryName__c</fullName>
        <formula>TEXT(KeiyakuCompanyName__r.CountryName__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>（会社情報）国名</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>通貨</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>RMB</fullName>
                </value>
                <value>
                    <fullName>JPY</fullName>
                </value>
                <value>
                    <fullName>HKD</fullName>
                </value>
                <value>
                    <fullName>INR</fullName>
                </value>
                <value>
                    <fullName>VND</fullName>
                </value>
                <value>
                    <fullName>IDR</fullName>
                </value>
                <value>
                    <fullName>PHP</fullName>
                </value>
                <value>
                    <fullName>MMK</fullName>
                </value>
                <value>
                    <fullName>LKR</fullName>
                </value>
                <value>
                    <fullName>MYR</fullName>
                </value>
                <value>
                    <fullName>SGD</fullName>
                </value>
                <value>
                    <fullName>USD</fullName>
                </value>
                <value>
                    <fullName>THB</fullName>
                </value>
                <value>
                    <fullName>MXN</fullName>
                </value>
                <value>
                    <fullName>その他</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DiscountPer__c</fullName>
        <inlineHelpText>パーセント表示です。
例）  5%　→　5
     10%　→　10</inlineHelpText>
        <label>優良割引率</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DiscountReason__c</fullName>
        <inlineHelpText>【優良割引】の場合は、
必ず入力してください。</inlineHelpText>
        <label>割引理由</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DiscountShubetsu__c</fullName>
        <label>適用割引率種別</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>グループ</fullName>
                </value>
                <value>
                    <fullName>団体</fullName>
                </value>
                <value>
                    <fullName>優良</fullName>
                </value>
                <value>
                    <fullName>グループ・団体</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DiscountTekiyouDate__c</fullName>
        <inlineHelpText>割引率を適用する開始日を
入力します。
変更があった場合は、
変更日を入力します。</inlineHelpText>
        <label>優良割引適用日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EigyoTanto__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>営業担当</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Shimei__c.StaffStatus__c</field>
                <operation>equals</operation>
                <value>在職者</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Shimei__c</referenceTo>
        <relationshipLabel>契約情報 (営業担当)</relationshipLabel>
        <relationshipName>R00N10000000HYtbEAG</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ExtNo__c</fullName>
        <label>内線番号</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <label>FAX</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>GroupDiscountPerLasttime__c</fullName>
        <formula>KeiyakuCompanyName__r.GroupName__r.GroupLasttimeDiscountPer__c</formula>
        <label>旧・割引率</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>GroupDiscountPer__c</fullName>
        <formula>IF(CASE(DiscountShubetsu__c, 
&quot;グループ&quot;, 1, 
&quot;団体&quot;,1, 0) = 0,0, KeiyakuCompanyName__r.GroupName__r.GroupWaribikiPer__c)</formula>
        <inlineHelpText>グループ割引に対しての新割引率です。
新・割引適用日付以降から、この新・割引率が適用になります</inlineHelpText>
        <label>新・割引率</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>GroupTekiyouDiscountDate__c</fullName>
        <formula>IF ( OR(ISPICKVAL( DiscountShubetsu__c , &quot;グループ・団体&quot;),ISPICKVAL(DiscountShubetsu__c, &quot;グループ&quot;),ISPICKVAL(DiscountShubetsu__c, &quot;団体&quot;)) = True,
IF (
DATE(YEAR(KeiyakuCompanyName__r.GroupName__r.GroupTekiyouDiscountDate__c)+1,
MONTH(KeiyakuCompanyName__r.GroupName__r.GroupTekiyouDiscountDate__c),
DAY(KeiyakuCompanyName__r.GroupName__r.GroupTekiyouDiscountDate__c))
 &lt;  MankiDate__c  ,
  TEXT(DATE( YEAR(MankiDate__c)-1 ,
MONTH(MankiDate__c),
DAY(MankiDate__c))) , TEXT(MankiDate__c)),&quot;-&quot;)</formula>
        <inlineHelpText>新・割引率の適用日です</inlineHelpText>
        <label>新・割引適用日付</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ImportCntractNo__c</fullName>
        <label>取込用契約No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ImportComm__c</fullName>
        <label>取込コメント</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jurisdiction__c</fullName>
        <formula>TEXT(KeiyakuCompanyName__r.Jurisdiction__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>（会社情報）管轄地区</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KeiyakuArea__c</fullName>
        <label>契約地区</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>北京</fullName>
                </value>
                <value>
                    <fullName>天津</fullName>
                </value>
                <value>
                    <fullName>青島</fullName>
                </value>
                <value>
                    <fullName>大連</fullName>
                </value>
                <value>
                    <fullName>上海</fullName>
                </value>
                <value>
                    <fullName>武漢</fullName>
                </value>
                <value>
                    <fullName>蘇州</fullName>
                </value>
                <value>
                    <fullName>無錫</fullName>
                </value>
                <value>
                    <fullName>昆山</fullName>
                </value>
                <value>
                    <fullName>南通</fullName>
                </value>
                <value>
                    <fullName>常州</fullName>
                </value>
                <value>
                    <fullName>常熟</fullName>
                </value>
                <value>
                    <fullName>南京</fullName>
                </value>
                <value>
                    <fullName>合肥</fullName>
                </value>
                <value>
                    <fullName>深セン</fullName>
                </value>
                <value>
                    <fullName>厦門</fullName>
                </value>
                <value>
                    <fullName>東莞</fullName>
                </value>
                <value>
                    <fullName>広州</fullName>
                </value>
                <value>
                    <fullName>中山</fullName>
                </value>
                <value>
                    <fullName>珠海</fullName>
                </value>
                <value>
                    <fullName>香港</fullName>
                </value>
                <value>
                    <fullName>ハノイ</fullName>
                </value>
                <value>
                    <fullName>ホーチミン</fullName>
                </value>
                <value>
                    <fullName>ニューデリー</fullName>
                </value>
                <value>
                    <fullName>チェンナイ</fullName>
                </value>
                <value>
                    <fullName>ジャカルタ</fullName>
                </value>
                <value>
                    <fullName>マニラ</fullName>
                </value>
                <value>
                    <fullName>プノンペン</fullName>
                </value>
                <value>
                    <fullName>シンガポール</fullName>
                </value>
                <value>
                    <fullName>ヤンゴン</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>KeiyakuCompanyName_Txt__c</fullName>
        <formula>KeiyakuCompanyName__c</formula>
        <label>契約会社名称（テキスト）</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KeiyakuCompanyName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>法人契約の場合は、
虫メガネから契約会社名称を
検索して選択します。

個人契約の場合は、
虫メガネから「個人契約」を
検索して選択します。</inlineHelpText>
        <label>契約会社名称</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>契約情報 (契約会社名称)</relationshipLabel>
        <relationshipName>R00N10000000HXmTEAW</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KeiyakuCount__c</fullName>
        <label>契約枠</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KeiyakuDate__c</fullName>
        <label>契約日付</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Keyaku_Medical_Insurance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>(契約会社)現地医療保険</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>契約情報 ((契約会社)現地医療保険)</relationshipLabel>
        <relationshipName>MedicalInsuranceCompanyName</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MailHaishin__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>メールを配信する場合は、チェックをつけます。</inlineHelpText>
        <label>メール配信</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MankiDate__c</fullName>
        <label>満期日付</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MenberKubunB__c</fullName>
        <formula>IF ( TaikaiDate__c   &lt;=  TODAY()  , &quot;退会企業&quot;, &quot;会員企業&quot;)</formula>
        <label>会員区分B</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MoushikomiDate__c</fullName>
        <label>申込日付</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NaimuTanto__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>内務担当</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Shimei__c.StaffStatus__c</field>
                <operation>equals</operation>
                <value>在職者</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Shimei__c</referenceTo>
        <relationshipLabel>契約情報 (内務担当)</relationshipLabel>
        <relationshipName>R00N10000000HYm4EAG</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <label>備考</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OMS_Child_Birth__c</fullName>
        <label>(OMS)Child Birth</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Payable</fullName>
                </value>
                <value>
                    <fullName>Not Payable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OMS_Dental__c</fullName>
        <label>(OMS)Dental</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Payable</fullName>
                </value>
                <value>
                    <fullName>Not Payable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OMS_Examination__c</fullName>
        <label>(OMS)Examination</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Payable</fullName>
                </value>
                <value>
                    <fullName>Not Payable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OMS_Medical__c</fullName>
        <label>(OMS)Medical</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Payable</fullName>
                </value>
                <value>
                    <fullName>Not Payable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OMS_Vaccination__c</fullName>
        <label>(OMS)Vaccination</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Payable</fullName>
                </value>
                <value>
                    <fullName>Not Payable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region_and_Area__c</fullName>
        <formula>TEXT(KeiyakuCompanyName__r.Region_and_Area__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>（会社情報）エリア</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SeikyuArea__c</fullName>
        <label>請求書発行地区</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>北京</fullName>
                </value>
                <value>
                    <fullName>天津</fullName>
                </value>
                <value>
                    <fullName>大連</fullName>
                </value>
                <value>
                    <fullName>青島</fullName>
                </value>
                <value>
                    <fullName>上海</fullName>
                </value>
                <value>
                    <fullName>蘇州</fullName>
                </value>
                <value>
                    <fullName>深セン</fullName>
                </value>
                <value>
                    <fullName>東莞</fullName>
                </value>
                <value>
                    <fullName>広州</fullName>
                </value>
                <value>
                    <fullName>香港</fullName>
                </value>
                <value>
                    <fullName>ハノイ</fullName>
                </value>
                <value>
                    <fullName>ニューデリー</fullName>
                </value>
                <value>
                    <fullName>チェンナイ</fullName>
                </value>
                <value>
                    <fullName>ジャカルタ</fullName>
                </value>
                <value>
                    <fullName>マニラ</fullName>
                </value>
                <value>
                    <fullName>プノンペン</fullName>
                </value>
                <value>
                    <fullName>シンガポール</fullName>
                </value>
                <value>
                    <fullName>ヤンゴン</fullName>
                </value>
                <value>
                    <fullName>コロンボ</fullName>
                </value>
                <value>
                    <fullName>クアラルンプール</fullName>
                </value>
                <value>
                    <fullName>バンコク</fullName>
                </value>
                <value>
                    <fullName>メキシコシティ</fullName>
                </value>
                <value>
                    <fullName>東京</fullName>
                </value>
                <value>
                    <fullName>大阪</fullName>
                </value>
                <value>
                    <fullName>名古屋</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SeikyuBusho__c</fullName>
        <label>請求先部署</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SeikyuCompanyName_Txt__c</fullName>
        <formula>SeikyuCompanyName__c</formula>
        <label>請求会社名称（テキスト）</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SeikyuCompanyName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>法人契約の場合は、
虫メガネから請求会社名称を
検索して選択します。

個人契約の場合は、
虫メガネから「個人契約」を
検索して選択します。</inlineHelpText>
        <label>請求先会社名称</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>契約情報 (請求先会社名称)</relationshipLabel>
        <relationshipName>R00N10000000Htk4EAC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SeikyuCountryCode__c</fullName>
        <label>請求先国番号</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SeikyuExtNo__c</fullName>
        <label>請求先内線番号</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SeikyuFax__c</fullName>
        <label>請求先FAX</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>SeikyuIssueDate__c</fullName>
        <label>請求書発行日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SeikyuNote__c</fullName>
        <inlineHelpText>メディック年会費の精算方法に関する事項を入力・記録します。
　例）一括精算/増員・減員発生毎に
　　　請求・返戻　etc　
　　　（その他精算方法の場合は
　　　　具体的な精算方法を入力)</inlineHelpText>
        <label>請求備考</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SeikyuShimei__c</fullName>
        <inlineHelpText>法人契約の場合は、
担当者名を入力します。 

個人契約の場合は、
契約個人名を入力します。</inlineHelpText>
        <label>請求先氏名</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SeikyuTel__c</fullName>
        <label>請求先TEL</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>SeikyuYakushoku__c</fullName>
        <label>請求先役職</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shimei__c</fullName>
        <inlineHelpText>法人契約の場合は、
担当者名を入力します。

個人契約の場合は、
契約個人名を入力します。</inlineHelpText>
        <label>氏名</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShiyoCountFamily__c</fullName>
        <label>使用枠（家族）</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ShiyoCountHoukatsu__c</fullName>
        <label>使用枠（包括）</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ShiyoCountMukimei__c</fullName>
        <label>使用枠（無記名）</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ShiyoCountSingle__c</fullName>
        <label>使用枠（単身）</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ShozokuArea__c</fullName>
        <formula>TEXT(KeiyakuCompanyName__r.ShozokuArea__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>（会社情報）所属地区</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaikaiDate__c</fullName>
        <label>退会日付</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tel__c</fullName>
        <label>TEL</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>WaribikiNote__c</fullName>
        <label>割引備考</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Yakushoku__c</fullName>
        <label>役職</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>o_Id__c</fullName>
        <label>o_Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>契約情報</label>
    <listViews>
        <fullName>X00_Batch_Process</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>1/1/2000 12:00 AM</value>
        </filters>
        <label>00. 一括処理 / Batch Process</label>
        <language>ja</language>
        <sharedTo>
            <role>DeveloperName70583713081</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>x01</fullName>
        <columns>KeiyakuArea__c</columns>
        <columns>NAME</columns>
        <columns>KeiyakuCompanyName__c</columns>
        <columns>EigyoTanto__c</columns>
        <columns>NaimuTanto__c</columns>
        <filterScope>Everything</filterScope>
        <label>01. 全ての契約</label>
    </listViews>
    <listViews>
        <fullName>x02</fullName>
        <columns>KeiyakuArea__c</columns>
        <columns>NAME</columns>
        <columns>KeiyakuCompanyName__c</columns>
        <columns>KeiyakuDate__c</columns>
        <columns>MankiDate__c</columns>
        <columns>EigyoTanto__c</columns>
        <columns>NaimuTanto__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>02. 今週登録の契約</label>
    </listViews>
    <listViews>
        <fullName>x110</fullName>
        <columns>KeiyakuArea__c</columns>
        <columns>NAME</columns>
        <columns>KeiyakuCompanyName__c</columns>
        <columns>EigyoTanto__c</columns>
        <columns>NaimuTanto__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>KeiyakuArea__c</field>
            <operation>equals</operation>
            <value>北京</value>
        </filters>
        <label>110. 北京</label>
        <sharedTo>
            <role>DeveloperName70583713081</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>x111</fullName>
        <columns>KeiyakuArea__c</columns>
        <columns>NAME</columns>
        <columns>KeiyakuCompanyName__c</columns>
        <columns>EigyoTanto__c</columns>
        <columns>NaimuTanto__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>KeiyakuArea__c</field>
            <operation>equals</operation>
            <value>天津</value>
        </filters>
        <label>111. 天津</label>
        <sharedTo>
            <role>DeveloperName70583713081</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>x112</fullName>
        <columns>KeiyakuArea__c</columns>
        <columns>NAME</columns>
        <columns>KeiyakuCompanyName__c</columns>
        <columns>EigyoTanto__c</columns>
        <columns>NaimuTanto__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>KeiyakuArea__c</field>
            <operation>equals</operation>
            <value>大連</value>
        </filters>
        <label>112. 大連</label>
        <sharedTo>
            <role>DeveloperName70583713081</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>x113</fullName>
        <columns>KeiyakuArea__c</columns>
        <columns>NAME</columns>
        <columns>KeiyakuCompanyName__c</columns>
        <columns>EigyoTanto__c</columns>
        <columns>NaimuTanto__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>KeiyakuArea__c</field>
            <operation>equals</operation>
            <value>青島</value>
        </filters>
        <label>113. 青島</label>
        <sharedTo>
            <role>DeveloperName70583713081</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>x120</fullName>
        <columns>KeiyakuArea__c</columns>
        <columns>NAME</columns>
        <columns>KeiyakuCompanyName__c</columns>
        <columns>EigyoTanto__c</columns>
        <columns>NaimuTanto__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>KeiyakuArea__c</field>
            <operation>equals</operation>
            <value>上海</value>
        </filters>
        <label>120. 上海</label>
        <sharedTo>
            <role>DeveloperName70583713081</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>x121</fullName>
        <columns>KeiyakuArea__c</columns>
        <columns>NAME</columns>
        <columns>KeiyakuCompanyName__c</columns>
        <columns>EigyoTanto__c</columns>
        <columns>NaimuTanto__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>KeiyakuArea__c</field>
            <operation>equals</operation>
            <value>成都</value>
        </filters>
        <label>121. 成都</label>
        <sharedTo>
            <role>DeveloperName70583713081</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>x122</fullName>
        <columns>KeiyakuArea__c</columns>
        <columns>NAME</columns>
        <columns>KeiyakuCompanyName__c</columns>
        <columns>EigyoTanto__c</columns>
        <columns>NaimuTanto__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>KeiyakuArea__c</field>
            <operation>equals</operation>
            <value>武漢</value>
        </filters>
        <label>122. 武漢</label>
        <sharedTo>
            <role>DeveloperName70583713081</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>x123</fullName>
        <columns>KeiyakuArea__c</columns>
        <columns>NAME</columns>
        <columns>KeiyakuCompanyName__c</columns>
        <columns>EigyoTanto__c</columns>
        <columns>NaimuTanto__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>KeiyakuArea__c</field>
            <operation>equals</operation>
            <value>杭州</value>
        </filters>
        <label>123. 杭州</label>
        <sharedTo>
            <role>DeveloperName70583713081</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>x124</fullName>
        <columns>KeiyakuArea__c</columns>
        <columns>NAME</columns>
        <columns>KeiyakuCompanyName__c</columns>
        <columns>EigyoTanto__c</columns>
        <columns>NaimuTanto__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>KeiyakuArea__c</field>
            <operation>equals</operation>
            <value>寧波</value>
        </filters>
        <label>124. 寧波</label>
        <sharedTo>
            <role>DeveloperName70583713081</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>x130</fullName>
        <columns>KeiyakuArea__c</columns>
        <columns>NAME</columns>
        <columns>KeiyakuCompanyName__c</columns>
        <columns>EigyoTanto__c</columns>
        <columns>NaimuTanto__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>KeiyakuArea__c</field>
            <operation>equals</operation>
            <value>蘇州</value>
        </filters>
        <label>130. 蘇州</label>
        <sharedTo>
            <role>DeveloperName70583713081</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>x131</fullName>
        <columns>KeiyakuArea__c</columns>
        <columns>NAME</columns>
        <columns>KeiyakuCompanyName__c</columns>
        <columns>EigyoTanto__c</columns>
        <columns>NaimuTanto__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>KeiyakuArea__c</field>
            <operation>equals</operation>
            <value>無錫</value>
        </filters>
        <label>131. 無錫</label>
        <sharedTo>
            <role>DeveloperName70583713081</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>x132</fullName>
        <columns>KeiyakuArea__c</columns>
        <columns>NAME</columns>
        <columns>KeiyakuCompanyName__c</columns>
        <columns>EigyoTanto__c</columns>
        <columns>NaimuTanto__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>KeiyakuArea__c</field>
            <operation>equals</operation>
            <value>昆山</value>
        </filters>
        <label>132. 昆山</label>
        <sharedTo>
            <role>DeveloperName70583713081</role>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>契約番号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>TekiyouWaribikiristuShubetu_CHK</fullName>
        <active>true</active>
        <description>適用割引率種別チェック</description>
        <errorConditionFormula>ISPICKVAL(DiscountShubetsu__c, &quot;グループ・団体&quot;)</errorConditionFormula>
        <errorMessage>&quot;グループ・団体&quot;は登録できません。
他の種別を選んでください。</errorMessage>
    </validationRules>
</CustomObject>